Fixed missing background image from contact block

--- a/src/components/contact-block/component.module.scss
+++ b/src/components/contact-block/component.module.scss
@@ -1,18 +1,11 @@
 @import '../../styles/variables';
 
-:global(.webp) .Contact {
-  background-image: url("/images/contact_bg.webp");
-}
-
-:global(.no-webp) .Contact {
-  background-image: url("/images/contact_bg.jpg");
-}
-
 .Contact {
   position: relative;
   height: 80vh;
   min-height: 500px;
   max-height: 600px;
+  background-image: url("/images/contact_b.jpg");
   background-position: center;
   background-attachment: fixed;
 
